# Lux-V1.0

./: .gitignore  AUDIT_ROADMAP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY_CONTACT.txt  TIER_BOUNDARIES.md  clippy.toml  deny.toml  pyproject.toml  rustfmt.toml
.cargo/: config.toml
benches/: scheduler_throughput.rs
docs/: ADVERSARIAL_TESTING.md  ARCHITECTURE.md  BENCHMARKS.md  BUILD_ATTESTATION.md  FORMAL_COST_MODEL.md  FORMAL_VERIFICATION.md  PYTHON_INTEGRATION.md  REFINEMENT_GAPS.md  SECURITY.md  TCB.md
docs/adr/: 0001-fail-closed-design.md  0002-capability-based-auth.md  0003-epoch-based-revocation.md  0004-distributed-topology-consensus.md  0005-revocation-semantics.md
examples/: boot_and_delegate.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ledger_arithmetic.rs  manifest_decode.rs
hiring-audit/: audit_log.py  bias_test.py  build_lux.sh  generate_data.py  main.py  model.py  phase2.py  policy_gate.py
hiring-audit/docs/: ONE_PAGER.md  PROOF_STATEMENT.md  REFERENCE_IMPLEMENTATION.md
hiring-audit/output/: audit_log.csv  audit_log.json  bias_report.txt  candidates.csv  candidates.json  decisions.csv  model_decisions.json  model_report.txt
lean/: LuxCapabilityBridge.lean  LuxCostModel.lean  LuxRefinement.lean  LuxSpec.lean  Refinement.lean  lakefile.lean
lending-audit/: audit_log.py  bias_test.py  generate_data.py  main.py  model.py  phase2.py  policy_gate.py
lending-audit/docs/: ONE_PAGER.md  PROOF_STATEMENT.md
lending-audit/output/: applicants.csv  applicants.json  audit_log.csv  audit_log.json  bias_report.txt  decisions.csv  model_decisions.json  model_report.txt
recidivism-demo/: audit_log.py  bias_test.py  generate_data.py  main.py  model.py  policy_gate.py
recidivism-demo/docs/: demo_proof_statement.md
recidivism-demo/output/: audit_log.csv  audit_log.json  defendants.csv  defendants.json  fairness_report.txt  model_decisions.json  model_report.txt  risk_assessments.csv
scripts/: attest.sh  audit.sh  ci_full.sh  coverage.sh  lint.sh
src/: error.rs  lib.rs  types.rs
src/audit/: event.rs  log.rs  mod.rs
src/auth/: capability.rs  mod.rs  policy.rs  revocation.rs
src/boot/: credentials.rs  decode.rs  manifest.rs  mod.rs
src/consensus/: log.rs  mod.rs  peer.rs  protocol.rs  raft.rs
src/hsm/: keystore.rs  mock.rs  mod.rs  pkcs11.rs  yubihsm.rs
src/metabolism/: ledger.rs  mod.rs  quota.rs
src/python/: audit.rs  gate.rs  mod.rs  policy.rs
src/scheduler/: mod.rs  queue.rs
src/topology/: graph.rs  mod.rs  node.rs
src/tpm/: attestation.rs  mock.rs  mod.rs  tss.rs
src/wasm/: executor.rs  host.rs  mod.rs
tests/: adversarial.rs  hsm.rs  hsm_state_disagreement.rs  integration.rs  properties.rs  raft.rs  security.rs  tpm.rs  wasm_executor.rs
tests/adversarial/: byzantine.rs  inv1_fail_closed.rs  inv2_capability_gated.rs  inv3_accountable_resources.rs  inv4_topology_bounded.rs  stress_chaos.rs
tests/integration/: audit_log.rs  auth_lifecycle.rs  boot_sequence.rs  consensus.rs  manifest_decode.rs  revocation.rs  topology_convergence.rs  wasm_host.rs
tests/properties/: cost_model.rs  invariant_capability.rs  invariant_fail_closed.rs  invariant_resources.rs  invariant_topology.proptest-regressions  invariant_topology.rs
tests/security/: invariant_enforcement.rs  privilege_escalation.rs  signature_verification.rs
tla/: .gitignore  CostModel.tla  LuxKernel.tla  MC.cfg  MC.tla
