[package]
name        = "lux_kernel"
version     = "1.0.0"
edition     = "2021"
rust-version = "1.78"
authors     = ["Lux Project Contributors"]
description = "A fail-closed, capability-authenticated governance microkernel"
license     = "Apache-2.0"
repository  = "https://github.com/markhamcarter220-sketch/lux-v1.0"
keywords    = ["kernel", "governance", "capability", "security", "infrastructure"]
categories  = ["os", "embedded", "no-std"]
readme      = "README.md"
publish     = false

[lib]
name = "lux_kernel"
path = "src/lib.rs"
# cdylib is required for PyO3's Python extension module (.so / .pyd).
# rlib is retained for cargo test and for use as a Rust dependency.
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror     = "2.0"
bitflags      = "2.5"
once_cell     = "1.19"
zeroize       = { version = "1.8", features = ["zeroize_derive"] }
heapless      = { version = "0.8", default-features = false }
# Tier 2: CBOR + Ed25519 + SHA-256
minicbor      = { version = "0.21", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false }
sha2          = { version = "0.10", default-features = false }
serde         = { version = "1.0", features = ["derive"], optional = true }
# Tier 3 Item 6: Python bindings (optional; enables std)
pyo3          = { version = "0.24.1", features = ["extension-module"], optional = true }

[dev-dependencies]
proptest   = "1.4"
criterion  = { version = "0.5", features = ["html_reports"] }
# Full ed25519-dalek for signing in tests (feature-union with main dep)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand         = { version = "0.8", features = ["getrandom"] }

[features]
default     = []
serde       = ["dep:serde"]
std         = []
# HSM integration: exposes the HsmProvider trait for real HSM driver backends.
# When disabled (default), only SoftwareHsm is available.
hsm         = []
# TPM integration: exposes TpmProvider for real TPM 2.0 driver backends.
# When disabled (default), only SoftwareTpm and NullTpm are available.
tpm         = []
# WASM execution substrate: compiles Lux's enforcement points as wasm32 exports.
wasm        = []
# Python extension module: exposes PyAuditLog and PyPolicyGate via PyO3.
# Enabling this feature switches the crate from no_std to std (PyO3 requires std).
# Build with: maturin develop --features python
python      = ["dep:pyo3"]

[profile.release]
opt-level   = 3
lto         = "fat"
codegen-units = 1
panic       = "abort"
strip       = "symbols"
overflow-checks = true

[profile.dev]
panic       = "abort"
overflow-checks = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[[bench]]
name    = "scheduler_throughput"
harness = false
